--- a/css/index.css
+++ b/css/index.css
@@ -14,5 +14,55 @@ body {
 }
 
 header {
-    
+    background-color: #331F19;
+    padding: 2rem;
+    text-align: center;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+}
+
+ul a {
+    text-decoration: none;
+    padding: 12px 14px;
+    color: #F4F0EA;
+}
+
+main {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+h2 {
+    color: #331F19;
+    font-size: 1.2em;
+}
+
+input[type="radio"], input[type="checkbox"] {
+    accent-color: #CCD595;
+}
+
+input[type="text"] {
+    width: 100%;
+    padding: 0.6rem;
+    border: 2px solid #CCD595;
+    outline: none;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+input::placeholder {
+    color: #331F19;
 }
